inserindo banner da section auto-conhecimento

--- a/autoconhecimento.html
+++ b/autoconhecimento.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Autoconhecimento </title>
+    <title>Autoconhecimento</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
 
@@ -36,7 +36,8 @@
             </nav>
         </div>
     </header>
-    <section class="bannerAutoConhecimento">
+    <section class="bannerSelfKnowledge">
+        <h2 class="description">lalalala</h2>
         <!-- <img src="assets/autoconhecimento.png" alt="" class="imageAutoConhecimento"> -->
     </section>
     <div class="container">
