iniciando page collge no projeto

--- a/autoconhecimento.html
+++ b/autoconhecimento.html
@@ -38,6 +38,7 @@
     </header>
     <section class="bannerSelfKnowledge">
         <h2 class="description">lalalala</h2>
+        <p>tururur</p>
         <!-- <img src="assets/autoconhecimento.png" alt="" class="imageAutoConhecimento"> -->
     </section>
     <div class="container">
